--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>odr*anywhere</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/npm/pretendard@1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css" />
 </head>
 <body>
   <div id="intro">
     <div class="intro-video-wrapper">
       <video id="introVideo" muted autoplay>
-        <source src="logo animation.mp4" type="video/mp4">
+        <source src="logo animation.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     </div>
@@ -23,7 +23,7 @@
         <a href="#" onclick="showPage('top')">TOP</a>
         <a href="#" onclick="showPage('about')">ABOUT</a>
       </nav>
-      <img src="logo-main.png" alt="odr logo" class="logo-center" onclick="showPage('top')">
+      <img src="logo-main.png" alt="odr logo" class="logo-center" onclick="showPage('top')" />
       <nav class="nav-right">
         <a href="#" onclick="showPage('account')">ACCOUNT</a>
         <a href="#" onclick="showPage('cart')">CART</a>
@@ -32,8 +32,10 @@
 
     <section id="top" class="page">
       <div class="banner">
-        <img src="banner.jpg" alt="banner" class="banner-image">
+        <img src="banner.jpg" alt="banner" class="banner-image" />
       </div>
+
+      <!-- ✅ 타원형 클리핑 유지 -->
       <svg width="0" height="0">
         <defs>
           <clipPath id="clip-product" clipPathUnits="objectBoundingBox">
@@ -43,6 +45,7 @@
       </svg>
 
       <div class="product-grid">
+        <!-- ✅ 상품 클릭 시 상세 페이지 이동 -->
         <div class="product-card" onclick="showDetail(1)"><img src="product1.jpeg" alt="product1"></div>
         <div class="product-card" onclick="showDetail(2)"><img src="product2.jpeg" alt="product2"></div>
         <div class="product-card" onclick="showDetail(3)"><img src="product3.jpeg" alt="product3"></div>
@@ -58,13 +61,14 @@
 
     <section id="about" class="page">
       <div class="about-hero">
-        <img src="about-hero.jpg" alt="about hero" class="banner-image">
+        <img src="about-hero.jpg" alt="about hero" class="banner-image" />
       </div>
       <div class="about-content">
+        <!-- ✅ 디졸브용 fade-in 클래스 유지 -->
         <h3 class="fade-in">CONCEPT</h3>
-        <img src="logo-intro.png" alt="LEAP GRAVITY logo" class="about-logo fade-in">
-        <p class="ko fade-in">ODR*는 “좋은 신발은 좋은 곳으로 데려다준다”는 믿음 아래,<br>로컬의 특색을 현대적인 감각으로 재해석한 리미티드 슈즈 컬렉션을 선보입니다.<br>신발은 단순한 소비를 넘어, 공간과 경험을 걷는 방식으로 확장됩니다.</p>
-        <p class="en fade-in">ODR* is founded on the belief that good shoes take you good places.<br>We present limited-edition footwear inspired by local identity, reimagined through a modern lens.<br>Each pair moves beyond product—becoming a way to walk through space and story.</p>
+        <img src="logo-intro.png" alt="LEAP GRAVITY logo" class="about-logo fade-in" />
+        <p class="ko fade-in">ODR*는 “좋은 신발은 좋은 곳으로 데려다준다”는 믿음 아래,<br />로컬의 특색을 현대적인 감각으로 재해석한 리미티드 슈즈 컬렉션을 선보입니다.<br />신발은 단순한 소비를 넘어, 공간과 경험을 걷는 방식으로 확장됩니다.</p>
+        <p class="en fade-in">ODR* is founded on the belief that good shoes take you good places.<br />We present limited-edition footwear inspired by local identity, reimagined through a modern lens.<br />Each pair moves beyond product—becoming a way to walk through space and story.</p>
       </div>
     </section>
 
@@ -72,22 +76,26 @@
       <div class="login-box">
         <h2>LOGIN</h2>
         <p>Enter your ID and password to login:</p>
-        <input type="text" id="login-id" placeholder="ID">
+        <!-- ✅ ID 입력 창 -->
+        <input type="text" id="login-id" placeholder="ID" />
         <div class="password-wrap">
-          <input type="password" id="login-pw" placeholder="Password">
+          <input type="password" id="login-pw" placeholder="Password" />
           <a href="#">Forgot your password?</a>
         </div>
         <button onclick="handleLogin()">LOGIN</button>
-        <p class="signup">Don't have an account?<br><a href="#">Sign up</a></p>
+        <p class="signup">Don't have an account?<br /><a href="#">Sign up</a></p>
         <p id="login-result"></p>
+        <!-- ✅ 로그인 성공 시 나타나는 팝업 -->
+        <div id="login-popup" style="opacity: 0;">Hello, <span id="login-user"></span>!</div>
       </div>
     </section>
 
     <section id="cart" class="page">
       <div class="cart-box">
         <h2>CART</h2>
+        <!-- ✅ 장바구니 내용 담기는 영역 -->
         <div id="cart-items">
-          <p>Your cart is empty</p>
+          <p id="cart-empty">Your cart is empty</p>
         </div>
         <button onclick="showPage('top')">SHOP OUR PRODUCTS</button>
       </div>
@@ -96,11 +104,12 @@
     <section id="product-detail" class="page">
       <div class="product-detail-container">
         <div class="product-detail-left">
-          <img id="detail-image" src="" alt="">
+          <img id="detail-image" src="" alt="" />
         </div>
         <div class="product-detail-right">
           <h2 id="detail-name">Product Name</h2>
           <p id="detail-price">₩000,000</p>
+          <!-- ✅ 사이즈 클릭 시 선택되는 기능 -->
           <div class="sizes" id="size-options">
             <span onclick="selectSize(this)">22</span><span onclick="selectSize(this)">23</span><span onclick="selectSize(this)">24</span><span onclick="selectSize(this)">25</span><span onclick="selectSize(this)">26</span>
           </div>
