--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
         <a href="#" onclick="showPage('about')">ABOUT</a>
       </nav>
       <img src="logo-main.png" alt="odr logo" class="logo-center" onclick="showPage('top')" />
-      <nav class="nav-right">
-        <a href="#" onclick="showPage('account')">ACCOUNT</a>
+      <nav class="nav-right" id="nav-right">
+        <a href="#" onclick="showPage('account')" id="account-link">ACCOUNT</a>
         <a href="#" onclick="showPage('cart')">CART</a>
+        <!-- ✅ 로그인 후 추가될 MYSHOPPING 버튼 -->
+        <!-- JS에서 동적으로 삽입됨 -->
       </nav>
     </header>
 
@@ -35,7 +37,6 @@
         <img src="banner.jpg" alt="banner" class="banner-image" />
       </div>
 
-      <!-- ✅ 타원형 클리핑 유지 -->
       <svg width="0" height="0">
         <defs>
           <clipPath id="clip-product" clipPathUnits="objectBoundingBox">
@@ -45,7 +46,6 @@
       </svg>
 
       <div class="product-grid">
-        <!-- ✅ 상품 클릭 시 상세 페이지 이동 -->
         <div class="product-card" onclick="showDetail(1)"><img src="product1.jpeg" alt="product1"></div>
         <div class="product-card" onclick="showDetail(2)"><img src="product2.jpeg" alt="product2"></div>
         <div class="product-card" onclick="showDetail(3)"><img src="product3.jpeg" alt="product3"></div>
@@ -64,7 +64,6 @@
         <img src="about-hero.jpg" alt="about hero" class="banner-image" />
       </div>
       <div class="about-content">
-        <!-- ✅ 디졸브용 fade-in 클래스 유지 -->
         <h3 class="fade-in">CONCEPT</h3>
         <img src="logo-intro.png" alt="LEAP GRAVITY logo" class="about-logo fade-in" />
         <p class="ko fade-in">ODR*는 “좋은 신발은 좋은 곳으로 데려다준다”는 믿음 아래,<br />로컬의 특색을 현대적인 감각으로 재해석한 리미티드 슈즈 컬렉션을 선보입니다.<br />신발은 단순한 소비를 넘어, 공간과 경험을 걷는 방식으로 확장됩니다.</p>
@@ -73,10 +72,9 @@
     </section>
 
     <section id="account" class="page">
-      <div class="login-box">
+      <div class="login-box" id="login-box">
         <h2>LOGIN</h2>
         <p>Enter your ID and password to login:</p>
-        <!-- ✅ ID 입력 창 -->
         <input type="text" id="login-id" placeholder="ID" />
         <div class="password-wrap">
           <input type="password" id="login-pw" placeholder="Password" />
@@ -84,8 +82,7 @@
         </div>
         <button onclick="handleLogin()">LOGIN</button>
         <p class="signup">Don't have an account?<br /><a href="#">Sign up</a></p>
-        <p id="login-result"></p>
-        <!-- ✅ 로그인 성공 시 나타나는 팝업 -->
+        <!-- ✅ 로그인 성공 시 나타나는 팝업 메시지 -->
         <div id="login-popup" style="opacity: 0;">Hello, <span id="login-user"></span>!</div>
       </div>
     </section>
@@ -93,7 +90,6 @@
     <section id="cart" class="page">
       <div class="cart-box">
         <h2>CART</h2>
-        <!-- ✅ 장바구니 내용 담기는 영역 -->
         <div id="cart-items">
           <p id="cart-empty">Your cart is empty</p>
         </div>
@@ -101,22 +97,39 @@
       </div>
     </section>
 
-    <section id="product-detail" class="page">
-      <div class="product-detail-container">
-        <div class="product-detail-left">
-          <img id="detail-image" src="" alt="" />
-        </div>
-        <div class="product-detail-right">
-          <h2 id="detail-name">Product Name</h2>
-          <p id="detail-price">₩000,000</p>
-          <!-- ✅ 사이즈 클릭 시 선택되는 기능 -->
-          <div class="sizes" id="size-options">
-            <span onclick="selectSize(this)">22</span><span onclick="selectSize(this)">23</span><span onclick="selectSize(this)">24</span><span onclick="selectSize(this)">25</span><span onclick="selectSize(this)">26</span>
-          </div>
-          <button id="add-to-cart" onclick="addToCart()">ADD TO CART</button>
+    <!-- ✅ MYSHOPPING 페이지 추가 -->
+    <section id="myshopping" class="page">
+      <div class="myshopping-box">
+        <h2>MY SHOPPING</h2>
+        <table class="shopping-status">
+          <tr>
+            <th>Before deposit</th>
+            <th>Preparing for delivery</th>
+            <th>Shipping</th>
+            <th>Delivery completed</th>
+            <th>Cancel</th>
+            <th>Exchange</th>
+            <th>Return</th>
+          </tr>
+          <tr>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+          </tr>
+        </table>
+        <div class="reward-info">
+          <p>Available Reward Points: $0</p>
+          <p>Used Reward Points: $0</p>
+          <p>Total Reward Points: $0</p>
+          <p>Total Order: $0 (0건)</p>
         </div>
       </div>
     </section>
+
   </div>
 
   <script src="script.js" defer></script>
