--- a/index.html
+++ b/index.html
@@ -46,18 +46,38 @@
       </svg>
 
       <div class="product-grid">
-        <!-- ✅ 각 상품에 디졸브 애니메이션 class 적용 -->
-        <div class="product-card fade-in-product" onclick="showDetail(1)"><img src="product1.jpeg" alt="product1"></div>
-        <div class="product-card fade-in-product" onclick="showDetail(2)"><img src="product2.jpeg" alt="product2"></div>
-        <div class="product-card fade-in-product" onclick="showDetail(3)"><img src="product3.jpeg" alt="product3"></div>
-        <div class="product-card fade-in-product" onclick="showDetail(4)"><img src="product4.jpeg" alt="product4"></div>
-        <div class="product-card fade-in-product" onclick="showDetail(5)"><img src="product5.jpeg" alt="product5"></div>
-        <div class="product-card fade-in-product" onclick="showDetail(6)"><img src="product6.jpeg" alt="product6"></div>
-        <div class="product-card fade-in-product" onclick="showDetail(7)"><img src="product7.jpeg" alt="product7"></div>
-        <div class="product-card fade-in-product" onclick="showDetail(8)"><img src="product8.jpeg" alt="product8"></div>
-        <div class="product-card fade-in-product" onclick="showDetail(9)"><img src="product9.jpeg" alt="product9"></div>
-        <div class="product-card fade-in-product" onclick="showDetail(10)"><img src="product10.jpeg" alt="product10"></div>
+        <div class="product-wrapper fade-in-product" onclick="showDetail(1)">
+          <div class="product-card"><img src="product1.jpeg" alt="product1"></div>
+        </div>
+        <div class="product-wrapper fade-in-product" onclick="showDetail(2)">
+          <div class="product-card"><img src="product2.jpeg" alt="product2"></div>
+        </div>
+        <div class="product-wrapper fade-in-product" onclick="showDetail(3)">
+          <div class="product-card"><img src="product3.jpeg" alt="product3"></div>
+        </div>
+        <div class="product-wrapper fade-in-product" onclick="showDetail(4)">
+          <div class="product-card"><img src="product4.jpeg" alt="product4"></div>
+        </div>
+        <div class="product-wrapper fade-in-product" onclick="showDetail(5)">
+          <div class="product-card"><img src="product5.jpeg" alt="product5"></div>
+        </div>
+        <div class="product-wrapper fade-in-product" onclick="showDetail(6)">
+          <div class="product-card"><img src="product6.jpeg" alt="product6"></div>
+        </div>
+        <div class="product-wrapper fade-in-product" onclick="showDetail(7)">
+          <div class="product-card"><img src="product7.jpeg" alt="product7"></div>
+        </div>
+        <div class="product-wrapper fade-in-product" onclick="showDetail(8)">
+          <div class="product-card"><img src="product8.jpeg" alt="product8"></div>
+        </div>
+        <div class="product-wrapper fade-in-product" onclick="showDetail(9)">
+          <div class="product-card"><img src="product9.jpeg" alt="product9"></div>
+        </div>
+        <div class="product-wrapper fade-in-product" onclick="showDetail(10)">
+          <div class="product-card"><img src="product10.jpeg" alt="product10"></div>
+        </div>
       </div>
+
     </section>
 
     <section id="about" class="page">
